# hass-mcp

./: Cargo.toml
docs/: mcp_apps.md
src/: main.rs  view.html
src/hass/: api.rs  mod.rs
