[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
rmcp = { version = "1.3.0", features = ["transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker", "client"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["rt-multi-thread", "signal", "net", "macros", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
parking_lot = "0.12"
tokio-util = "0.7.18"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
schemars = "1"
thiserror = "2"
clap = { version = "4.6.0", features = ["derive"] }
